# RabbitSOA

./: README.md  docker-compose.yml  docker-notes.txt
cpp-service/: CMakeLists.txt  Dockerfile  cpp-service.cpp  mq.cpp  mq.h
dev-scripts/: build_cpp-dev-base  build_cpp-service  build_rmq-console  cmd_cpp-dev-base  cmd_cpp-service  cmd_rmq-console  run_cpp-service  run_rmq-console
mq/: Dockerfile  advanced.config  rabbitmq.conf
mq/plugins/: rabbitmq_auth_backend_amqp-3.8.0.ez
proto/: CMakeLists.txt  rsoa-example.proto
protobufs/: CMakeLists.txt  cpp-service.proto
rmq-console/: Dockerfile  console.py  exchange_config.py  handlers.py  mqservice.py  protobuf_utils.py  requirements.txt
